[gd_scene load_steps=23 format=3 uid="uid://dnykjbxqrrwle"]

[ext_resource type="Script" uid="uid://d0mth1pcyp40h" path="res://Both/MainMenu/main_menu.gd" id="1_kn4uv"]
[ext_resource type="Texture2D" uid="uid://g38l1oj3cyvk" path="res://Both/MainMenu/MainMenuMockup.png" id="2_i1s0u"]
[ext_resource type="Texture2D" uid="uid://bt8m2hbttgyln" path="res://Both/MainMenu/HellButton/HellNormal.png" id="3_d7xtp"]
[ext_resource type="Texture2D" uid="uid://b826en2he2nvk" path="res://Both/MainMenu/HeavenButton/HeavenNormal.png" id="3_l4bi2"]
[ext_resource type="Texture2D" uid="uid://0hsyikb5yctm" path="res://Both/MainMenu/HeavenButton/HeavenPressed.png" id="4_q64yn"]
[ext_resource type="Texture2D" uid="uid://dx83pl6fu5h13" path="res://Both/MainMenu/HellButton/HellPressed.png" id="4_r31fs"]
[ext_resource type="Texture2D" uid="uid://ctrq0won31caq" path="res://Both/MainMenu/HeavenButton/HeavenHover.png" id="5_2kgaa"]
[ext_resource type="Texture2D" uid="uid://bdnvwlderwqv2" path="res://Both/MainMenu/HellButton/HellHover.png" id="5_p5mbw"]
[ext_resource type="Texture2D" uid="uid://c1ugkqcrg24yb" path="res://Both/MainMenu/HeavenButton/HeavenOutline.png" id="6_jdm0o"]
[ext_resource type="Texture2D" uid="uid://dnadbbynf5dlg" path="res://Both/MainMenu/HellButton/HellOutline.png" id="6_yigdr"]
[ext_resource type="BitMap" uid="uid://dqu7xfb4cfcm0" path="res://Both/MainMenu/HellButton/HellBitmap.png" id="7_foo2x"]
[ext_resource type="BitMap" uid="uid://bnh72ruci4lmf" path="res://Both/MainMenu/HeavenButton/HeavenBitmap.png" id="7_q3sg6"]
[ext_resource type="Texture2D" uid="uid://dbag3niyvif1m" path="res://Both/MainMenu/Quit/QuitNormal.png" id="11_6ylwo"]
[ext_resource type="Texture2D" uid="uid://dewff7whpy3de" path="res://Both/MainMenu/Settings/SettingsNormal.png" id="11_bcjqc"]
[ext_resource type="Texture2D" uid="uid://dh14n5oobccba" path="res://Both/MainMenu/Quit/QuitPressed.png" id="12_6ylwo"]
[ext_resource type="Texture2D" uid="uid://cji4yfdv8h250" path="res://Both/MainMenu/Settings/SettingsPressed.png" id="12_r31fs"]
[ext_resource type="Texture2D" uid="uid://dm367qxhjro6a" path="res://Both/MainMenu/Quit/QuitHover.png" id="13_1011k"]
[ext_resource type="Texture2D" uid="uid://cyel7dpn6e8hw" path="res://Both/MainMenu/Settings/SettingsHover.png" id="13_p5mbw"]
[ext_resource type="BitMap" uid="uid://qei4a5uodybf" path="res://Both/MainMenu/Quit/QuitBitmap.png" id="14_1011k"]
[ext_resource type="Texture2D" uid="uid://ctmqdiind1bw6" path="res://Both/MainMenu/Settings/SettingsOutline.png" id="14_foo2x"]
[ext_resource type="BitMap" uid="uid://bh1p0uceoxywo" path="res://Both/MainMenu/Settings/SettingsBitmap.png" id="14_yigdr"]
[ext_resource type="Texture2D" uid="uid://cdi0cib36h2be" path="res://Both/MainMenu/Quit/QuitOutline.png" id="19_p5mbw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kn4uv")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.247059)
scale = Vector2(4, 4)
texture = ExtResource("2_i1s0u")
centered = false

[node name="MusicStartTimer" type="Timer" parent="."]
one_shot = true

[node name="HeavenPlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 460.0
offset_right = 718.0
offset_bottom = 526.0
scale = Vector2(4, 4)
focus_neighbor_right = NodePath("../HellPlayButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
texture_normal = ExtResource("3_l4bi2")
texture_pressed = ExtResource("4_q64yn")
texture_hover = ExtResource("5_2kgaa")
texture_focused = ExtResource("6_jdm0o")
texture_click_mask = ExtResource("7_q3sg6")

[node name="HellPlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 460.0
offset_right = 724.0
offset_bottom = 528.0
scale = Vector2(4, 4)
focus_neighbor_left = NodePath("../HeavenPlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
texture_normal = ExtResource("3_d7xtp")
texture_pressed = ExtResource("4_r31fs")
texture_hover = ExtResource("5_p5mbw")
texture_focused = ExtResource("6_yigdr")
texture_click_mask = ExtResource("7_foo2x")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 804.0
offset_right = 514.0
offset_bottom = 846.0
scale = Vector2(4, 4)
focus_neighbor_top = NodePath("../HeavenPlayButton")
focus_neighbor_right = NodePath("../QuitButton")
texture_normal = ExtResource("11_bcjqc")
texture_pressed = ExtResource("12_r31fs")
texture_hover = ExtResource("13_p5mbw")
texture_focused = ExtResource("14_foo2x")
texture_click_mask = ExtResource("14_yigdr")

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1280.0
offset_top = 804.0
offset_right = 1322.0
offset_bottom = 846.0
scale = Vector2(4, 4)
focus_neighbor_left = NodePath("../SettingsButton")
focus_neighbor_top = NodePath("../HellPlayButton")
texture_normal = ExtResource("11_6ylwo")
texture_pressed = ExtResource("12_6ylwo")
texture_hover = ExtResource("13_1011k")
texture_focused = ExtResource("19_p5mbw")
texture_click_mask = ExtResource("14_1011k")

[connection signal="timeout" from="MusicStartTimer" to="." method="_on_music_start_timer_timeout"]
[connection signal="button_down" from="HeavenPlayButton" to="." method="_on_heaven_play_button_button_down"]
[connection signal="button_up" from="HeavenPlayButton" to="." method="_on_heaven_play_button_button_up"]
[connection signal="focus_entered" from="HeavenPlayButton" to="." method="_on_heaven_play_button_focus_entered"]
[connection signal="focus_exited" from="HeavenPlayButton" to="." method="_on_heaven_play_button_focus_exited"]
[connection signal="mouse_entered" from="HeavenPlayButton" to="." method="_on_heaven_play_button_mouse_entered"]
[connection signal="mouse_exited" from="HeavenPlayButton" to="." method="_on_heaven_play_button_mouse_exited"]
[connection signal="pressed" from="HeavenPlayButton" to="." method="_on_heaven_play_button_pressed"]
[connection signal="button_down" from="HellPlayButton" to="." method="_on_hell_play_button_button_down"]
[connection signal="button_up" from="HellPlayButton" to="." method="_on_hell_play_button_button_up"]
[connection signal="focus_entered" from="HellPlayButton" to="." method="_on_hell_play_button_focus_entered"]
[connection signal="focus_exited" from="HellPlayButton" to="." method="_on_hell_play_button_focus_exited"]
[connection signal="mouse_entered" from="HellPlayButton" to="." method="_on_hell_play_button_mouse_entered"]
[connection signal="mouse_exited" from="HellPlayButton" to="." method="_on_hell_play_button_mouse_exited"]
[connection signal="pressed" from="HellPlayButton" to="." method="_on_hell_play_button_pressed"]
[connection signal="button_down" from="SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_up" from="SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="focus_exited" from="SettingsButton" to="." method="_on_settings_button_focus_exited"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="." method="_on_settings_button_mouse_exited"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="button_down" from="QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_up" from="QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="focus_exited" from="QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
